--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "app.h": "c",
-        "fruit.h": "c"
+        "fruit.h": "c",
+        "typeinfo": "c"
     }
 }
